# Lab-2-1

./: main.cpp
1 лаба/: CMakeLists.txt  main.cpp
1 лаба/Lists/headers/: Array.h  Interface.h  List.h  Vector.h
1 лаба/Lists/sources/: Array.cpp  List.cpp  Vector.cpp
1 лаба/Tests/: Test.cpp
1 лаба/Time_and_Date/headers/: Date.h  Date_and_Time.h  Times.h
1 лаба/Time_and_Date/sources/: Date.cpp  Date_and_Time.cpp  Times.cpp
